# photo-selector

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/photo_selector/: analyzer.py  audio_analyzer.py  cli.py  config_loader.py  dedupe_utils.py  dependency_check.py  execution_plan.py  frame_extractor.py  log_utils.py  manifest.py  manifest_video.py  ollama_client.py  output_paths.py  resume_db.py  score_schema.py  selector.py  video_cli.py  video_digest.py  video_splitter.py
src/photo_selector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_execution_plan.py  test_output_paths.py  test_score_schema.py  test_selector_duplicates.py  test_video_cleanup.py  test_video_concat.py  test_video_config.py  test_video_dedupe.py
